--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "No Description here.",
   "publisher": "Likan",
-  "version": "1.1.40",
+  "version": "1.1.41",
   "author": "likan",
   "repository": "https://github.com/lirkang/likan",
   "engines": {
@@ -405,31 +405,31 @@
     "snippets": [
       {
         "language": "typescript",
-        "path": "./public/json/common.code-snippets"
+        "path": "./public/snippets/common.code-snippets"
       },
       {
         "language": "javascript",
-        "path": "./public/json/common.code-snippets"
+        "path": "./public/snippets/common.code-snippets"
       },
       {
         "language": "typescriptreact",
-        "path": "./public/json/javascriptreact.code-snippets"
+        "path": "./public/snippets/javascriptreact.code-snippets"
       },
       {
         "language": "javascriptreact",
-        "path": "./public/json/javascriptreact.code-snippets"
+        "path": "./public/snippets/javascriptreact.code-snippets"
       },
       {
         "language": "typescriptreact",
-        "path": "./public/json/common.code-snippets"
+        "path": "./public/snippets/common.code-snippets"
       },
       {
         "language": "javascriptreact",
-        "path": "./public/json/common.code-snippets"
+        "path": "./public/snippets/common.code-snippets"
       },
       {
         "language": "vue",
-        "path": "./public/json/vue.code-snippets"
+        "path": "./public/snippets/vue.code-snippets"
       }
     ]
   },
