--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "No Description here.",
   "publisher": "Likan",
-  "version": "1.1.42",
+  "version": "1.1.43",
   "author": "likan",
   "repository": "https://github.com/lirkang/likan",
   "engines": {
@@ -270,7 +270,7 @@
       {
         "key": "ctrl+shift+alt+r",
         "command": "likan.other.packageScript",
-        "when": "workspaceFolderCount > 0"
+        "when": "workspaceFolderCount > 0 && resourceScheme != git && resourceScheme != untitled"
       },
       {
         "key": "alt+shift+e",
