--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "outDir": "dist"
   },
   "include": ["**/*.ts", "**/*.js"],
-  "exclude": ["**/node_modules", "dist", "lib"]
+  "exclude": ["**/node_modules", "dist", "lib", "playground"]
 }
