--- a/package.json
+++ b/package.json
@@ -409,6 +409,7 @@
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "16.x.x",
+    "@types/node-os-utils": "^1.3.0",
     "@types/normalize-path": "^3.0.0",
     "@types/numeral": "^2.0.2",
     "@types/vscode": "^1.72.0",
@@ -434,6 +435,7 @@
     "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.2.10",
+    "node-os-utils": "^1.3.7",
     "normalize-path": "^3.0.0",
     "numeral": "^2.0.6",
     "open": "^8.4.0",
