--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
       "type": "extensionHost",
       "request": "launch",
       "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}" /* , "--disable-extensions" */,
+        "--extensionDevelopmentPath=${workspaceFolder}",
+        "--disable-extensions",
         "${workspaceFolder}/playground"
       ],
       "outFiles": ["${workspaceFolder}/lib/**/*.js"],
